--- a/YSM/src/app/components/review/review.component.html
+++ b/YSM/src/app/components/review/review.component.html
@@ -1,10 +1,22 @@
 <div class="container">
+    <div class="row" *ngIf="this.sprintNum === undefined">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div class="sprintClosed">the team is currently busy with a sprint please login once strint has ended. thank you</div>
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+
+    <div *ngIf="this.sprintNum !== undefined" class="row justify-content-center">
+        <div class="col-md-6">
+            <h2 class="headerLabel justify-content-center">Sprint Review ({{this.sprint[0]['name']}} sprint {{this.sprintNum.split('-')[1]}})</h2>
+        </div>
+
+    </div>
     <div class="row">
         <div class="col-md-2"></div>
-
         <div class="col-md-8">
             <div class="questionnaire">
-
                 <br>
                 <div class="row">
                     <div class="col-md-6">
@@ -79,7 +91,7 @@
             <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-4 ">
-                    <input class="btn justify-content-right" type="submit" value="Submit" (click)="commentTest()">
+                    <input class="btn justify-content-right" type="submit" value="Submit" (click)="review()">
                 </div>
                 <div class="col-md-4"></div>
             </div>
@@ -89,3 +101,4 @@
 
 
     </div>
+</div>
